2005-07-29  Dave Brolley  <brolley@redhat.com>

	* operand.scm (op:new-mode): Convert (obj:name op) to a string for
	string-append.

2005-07-15  Alan Modra  <amodra@bigpond.net.au>

	* cpu/fr30.opc (print_register_list): Correct format strings.
	* cpu/ip2k.opc: Likewise.

2005-07-05  Nick Clifton  <nickc@redhat.com>

	* cpu/iq2000.opc (parse_lo16, parse_mlo16): Make value parameter
	unsigned in order to avoid compile time warnings about sign
	conflicts.

2005-07-01  Nick Clifton  <nickc@redhat.com>

	* desc-cpu.scm: Update to ISO C90 function declaration style.
	* opc-asmdis.scm: Likewise.
	* opc-ibld.scm: Likewise.
	* opc-itab.scm: Likewise.
	* cpu/fr30.opc: Likewise.
	* cpu/i960.opc: Likewise.
	* cpu/ip2k.opc: Likewise.
	* cpu/iq2000.opc: Likewise.
	* cpu/m32r.opc: Likewise.
	* cpu/openrisc.opc: Likewise.
	* cpu/sh.opc: Likewise.
	* cpu/sparc.opc: Likewise.
	* cpu/xstormy16.opc: Likewise.

2005-06-15  Dave Brolley  <brolley@redhat.com>

	* sid-cpu.scm (-gen-hw-stream-and-destream-fns): New function.
	(cgen-cpu.h): Call it.

	Contributed on behalf of Graydon Hoare
	2001-06-05  graydon hoare  <graydon@redhat.com>

	* utils.scm (foldl): Define.
	(foldr): Define.
	(filter): Define.
	(union): Define.
	(intersection): Simplify.
	* sid.scm : Set APPLICATION to SID-SIMULATOR.
	(-op-gen-delayed-set-maybe-trace): Define.
	(<operand> 'gen-set-{quiet,trace}): Delegate to
	op-gen-delayed-set-quiet etc. Note: this is still a little tangled
	up and needs cleaning.
	(-with-parallel?): Hardwire with-parallel to #t.
	(<operand> 'cxmake-get): Replace with lookahead-aware code
	* sid-decode.scm: Remove per-insn writeback fns.
	(-gen-idesc-decls): Redefine sem_fn type.
	* sid-cpu.scm (gen-write-stack-structure): Replace parexec stuff
	with write stack stuff.
	(cgen-write.cxx): Replace per-insn writebacks with single write
	stack writeback. Add write stack reset function.
	(-gen-scache-semantic-fn insn): Replace parexec stuff with write
	stack stuff.